fixing scrollbar issue on film home

--- a/app/coach/team-info/styles.less
+++ b/app/coach/team-info/styles.less
@@ -1,7 +1,6 @@
 @import (reference) "main.less";
 
 .team-info{
-  overflow-y: scroll;
 
   .information{
     padding:20px;
